# uc-intg-spotify

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: build-local.sh
uc_intg_spotify/: __init__.py  __main__.py  browser.py  client.py  config.py  device.py  discovery.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup.py
