[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-spotify"
dynamic = ["version"]
description = "Spotify integration for Unfolded Circle Remote Two"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
readme = "README.md"
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
keywords = ["spotify", "remote", "home automation", "unfolded circle"]
requires-python = ">=3.11"

dependencies = [
    "ucapi>=0.3.1",
    "aiohttp>=3.8.0",
    "certifi>=2023.7.22"
]

[project.urls]
Homepage = "https://github.com/mase1981/uc-intg-spotify"
"Bug Reports" = "https://github.com/mase1981/uc-intg-spotify/issues"
Source = "https://github.com/mase1981/uc-intg-spotify"

[tool.setuptools]
packages = ["uc_intg_spotify"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_spotify.__version__"}